--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
 
       <div class="banner">
-        <a href="#"><img id="zflogo" src="images/zflogo.png" alt="zflogo.png"></a>
+        <a href="#"><img id="zflogo" src="images/ZFLogo.png" alt="zflogo.png"></a>
       </div>
 
       <div class="content">
@@ -38,8 +38,8 @@
           <h1 id="thumbTxt">Now that's out of the way, so here's some of my work!</h1>
           <img src="images/OBJCollage.png" alt="" id="OBJ" class="thumbs">
           <img src="images/BookCover.png" alt="" id="BookCover" class="thumbs">
-          <img src="images/BreadcrumbsLogo.png" alt="BreadCrumbs" class="thumbs">
-          <img src="images/chick.png" alt="chick" id="chick" class="thumbs">
+          <img src="images/BreadCrumbsLogo.png" alt="BreadCrumbs" class="thumbs">
+          <img src="images/Chick.png" alt="chick" id="chick" class="thumbs">
         </div>
       </div>
 
